# ibkr_alerts

./: .gitignore  __main__.py  pyproject.toml
src/ibkr_alerts/: __main__.py
