[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr_alerts"
version = "0.1.0"
description = "Real-time Interactive Brokers market data monitor"
requires-python = ">=3.9"
dependencies = [
    "ib_insync>=0.9.82",
]

[project.scripts]
ibkr_alerts = "ib_market_monitor.main:main"
